# Gazebo-AutoSim-TrackerTest

./: README.md
docker/: Dockerfile
src/sim_autotest/: package.xml  setup.cfg  setup.py
src/sim_autotest/launch/: bringup.launch.py
src/sim_autotest/sim_autotest/: detector.py  evaluator.py  mover.py  spawner.py
worlds/: floor.world
