<?xml version="1.0"?>
<package format="3">
  <name>sim_autotest</name>
  <version>0.1.0</version>
  <description>Gazebo auto simulation and tracker test harness</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
</package>
